package com.peppayi.designpattern.headfirst.chapters.chapter04.pizza;

import com.peppayi.designpattern.headfirst.chapters.chapter04.Pizza;

public class PepperoniPizza extends Pizza {
}
